--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,82 @@
+body {
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 100dvh;
+  padding: 0 8px;
+}
 
+header {
+  margin-top: 8px;
+  margin-bottom: 100px;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+
+footer {
+  margin-top: 100px;
+  margin-bottom: 8px;
+}
+
+/* Resolved address */
+.address {
+  text-align: center;
+  font-size: x-large;
+}
+
+/* Current weather conditions */
+.current-conditions {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.current-conditions img {
+  width: 200px;
+  height: 200px;
+}
+
+.current-data-container div:first-child {
+  font-weight: bold;
+  font-size: x-large;
+}
+
+.current-data-container div:nth-child(2) {
+  font-size: xx-large;
+}
+
+/* Weather summary */
+.weather-summary {
+  font-style: italic;
+  text-align: center;
+}
+
+@media (max-width: 375px) {
+  .current-conditions {
+    flex-direction: column;
+  }
+
+  .current-data-container {
+    text-align: center;
+  }
+}
