--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,7 @@ footer {
   align-items: center;
   gap: 4px;
 
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   text-align: center;
   padding: 20px;
   margin: 20px;
