Add box-shadow to header

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,8 @@ body {
 }
 
 header {
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   display: flex;
   align-items: stretch;
   justify-content: center;
