Finish final logic, fahrenheit change

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,32 @@ body {
 }
 
 header {
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   display: flex;
   align-items: stretch;
   justify-content: center;
+  gap: 12px;
   margin-top: 12px;
   margin-bottom: 50px;
+}
+
+header > * {
+  display: flex;
+  justify-content: center;
+  border-radius: 8px;
+  box-shadow:
+    rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+header select {
+  background-color: #f0f0f0;
+  padding: 4px;
+  cursor: pointer;
+  border: none;
+}
+header select:focus {
+  outline-color: #b3b3b3;
 }
 
 header input {
@@ -118,7 +137,10 @@ footer {
   align-items: center;
   gap: 4px;
 
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow:
+    rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   text-align: center;
   padding: 20px;
   margin: 20px;
